FORGE-570 Upgrade AWS SDK to v2