@@ -18,6 +18,7 @@ package com.bloomreach.xm.manager.s3.service;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.net.URL;
+import java.time.Duration;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -34,45 +35,52 @@ import org.slf4j.LoggerFactory;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 
-import com.amazonaws.HttpMethod;
-import com.amazonaws.SdkClientException;
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.AbortMultipartUploadRequest;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.CompleteMultipartUploadRequest;
-import com.amazonaws.services.s3.model.DeleteObjectsRequest;
-import com.amazonaws.services.s3.model.GeneratePresignedUrlRequest;
-import com.amazonaws.services.s3.model.InitiateMultipartUploadRequest;
-import com.amazonaws.services.s3.model.InitiateMultipartUploadResult;
-import com.amazonaws.services.s3.model.ListObjectsV2Request;
-import com.amazonaws.services.s3.model.ListObjectsV2Result;
-import com.amazonaws.services.s3.model.ObjectListing;
-import com.amazonaws.services.s3.model.ObjectMetadata;
-import com.amazonaws.services.s3.model.PartETag;
-import com.amazonaws.services.s3.model.PutObjectRequest;
-import com.amazonaws.services.s3.model.S3ObjectSummary;
-import com.amazonaws.services.s3.model.UploadPartRequest;
-import com.amazonaws.services.s3.model.UploadPartResult;
-import com.bloomreach.xm.manager.api.ListItem;
 import com.bloomreach.xm.manager.api.Type;
 import com.bloomreach.xm.manager.common.api.AwsS3Service;
 import com.bloomreach.xm.manager.s3.model.S3ListItem;
+import software.amazon.awssdk.core.exception.SdkClientException;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.regions.Region;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.AbortMultipartUploadRequest;
+import software.amazon.awssdk.services.s3.model.CommonPrefix;
+import software.amazon.awssdk.services.s3.model.CompleteMultipartUploadRequest;
+import software.amazon.awssdk.services.s3.model.CompletedMultipartUpload;
+import software.amazon.awssdk.services.s3.model.CompletedPart;
+import software.amazon.awssdk.services.s3.model.CreateMultipartUploadRequest;
+import software.amazon.awssdk.services.s3.model.CreateMultipartUploadResponse;
+import software.amazon.awssdk.services.s3.model.Delete;
+import software.amazon.awssdk.services.s3.model.DeleteObjectsRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.ListObjectsV2Request;
+import software.amazon.awssdk.services.s3.model.ListObjectsV2Response;
+import software.amazon.awssdk.services.s3.model.ObjectCannedACL;
+import software.amazon.awssdk.services.s3.model.ObjectIdentifier;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
+import software.amazon.awssdk.services.s3.model.UploadPartRequest;
+import software.amazon.awssdk.services.s3.model.UploadPartResponse;
+import software.amazon.awssdk.services.s3.presigner.S3Presigner;
+import software.amazon.awssdk.services.s3.presigner.model.GetObjectPresignRequest;
 
 public class AwsS3ServiceImpl implements AwsS3Service {
 
     private static final Logger logger = LoggerFactory.getLogger(AwsS3ServiceImpl.class);
     private static final Tika TIKA = new Tika();
     private final String bucket;
-    private final AmazonS3 amazonS3;
+    private final Region region;
+    private final S3Client amazonS3;
+    private final S3Presigner presignerS3;
     private final boolean presigned;
     private final boolean aclEnabled;
     private final long expTime;
-    private final Map<String, InitiateMultipartUploadResult> multipartUploadResultMap = new HashMap<>();
-    private final MultiValueMap<String, PartETag> eParts = new LinkedMultiValueMap<>();
+    private final Map<String, CreateMultipartUploadResponse> multipartUploadResultMap = new HashMap<>();
+    private final MultiValueMap<String, CompletedPart> eParts = new LinkedMultiValueMap<>();
 
-    public AwsS3ServiceImpl(final AwsService awsService, final String bucket, final boolean presigned, final boolean aclEnabled, final long expTime) {
+    public AwsS3ServiceImpl(final AwsService awsService, final String bucket, final String region, final boolean presigned, final boolean aclEnabled, final long expTime) {
         this.bucket = bucket;
+        this.region = Region.of(region);
         amazonS3 = awsService.getS3client();
+        presignerS3 = awsService.getS3presigner();
         this.presigned = presigned;
         this.aclEnabled = aclEnabled;
         this.expTime = expTime;
@@ -81,131 +89,180 @@ public class AwsS3ServiceImpl implements AwsS3Service {
     @Override
     public String generateUrl(final String key) {
         if(!presigned) {
-            return amazonS3.getUrl(bucket, key).toString();
+            return getUrl(key);
         } else {
             return generatePresignedUrl(key);
         }
     }
 
     public String generatePresignedUrl(final String key) {
-        java.util.Date expiration = new java.util.Date();
-        long expTimeMillis = expiration.getTime();
-        expTimeMillis += 1000 * 60 * expTime;
-        expiration.setTime(expTimeMillis);
+        GetObjectRequest getObjectRequest = GetObjectRequest.builder()
+            .bucket(bucket)
+            .key(key)
+            .build();
 
-        GeneratePresignedUrlRequest generatePresignedUrlRequest =
-                new GeneratePresignedUrlRequest(bucket, key)
-                        .withMethod(HttpMethod.GET)
-                        .withExpiration(expiration);
-        final URL url = amazonS3.generatePresignedUrl(generatePresignedUrlRequest);
-        return url.toString();
+        GetObjectPresignRequest presignRequest = GetObjectPresignRequest.builder()
+            .signatureDuration(Duration.ofMinutes(expTime))
+            .getObjectRequest(getObjectRequest)
+            .build();
+
+        URL presignedUrl = presignerS3.presignGetObject(presignRequest).url();
+        return presignedUrl.toString();
+    }
+
+    private String getUrl(final String key) {
+      return String.format("https://%s.s3.%s.amazonaws.com/%s", bucket, region.id(), key);
     }
 
     public List<S3ListItem> getList(final String prefix, final String query) {
-        ListObjectsV2Request listObjectsRequest = new ListObjectsV2Request()
-                .withBucketName(bucket)
-                .withPrefix(prefix)
-                .withDelimiter("/");
+        ListObjectsV2Request listObjectsRequest = ListObjectsV2Request.builder()
+              .bucket(bucket)
+              .prefix(prefix)
+              .delimiter("/")
+              .build();
 
-        ListObjectsV2Result objectListing = amazonS3.listObjectsV2(listObjectsRequest);
+        ListObjectsV2Response objectListing = amazonS3.listObjectsV2(listObjectsRequest);
 
-        List<S3ListItem> objects = objectListing.getObjectSummaries().stream().filter(s3ObjectSummary -> !s3ObjectSummary.getKey().equals(prefix)).map(s3ObjectSummary -> new S3ListItem(s3ObjectSummary, amazonS3.getUrl(bucket, s3ObjectSummary.getKey()).toString())).collect(Collectors.toList());
-        List<S3ListItem> folders = objectListing.getCommonPrefixes().stream().map(S3ListItem::new).collect(Collectors.toList());
+        List<S3ListItem> objects = objectListing.contents().stream().filter(s3Object -> !s3Object.key().equals(prefix)).map(s3Object -> new S3ListItem(s3Object, getUrl(s3Object.key()))).toList();
+        List<S3ListItem> folders = objectListing.commonPrefixes().stream().map(CommonPrefix::prefix).map(S3ListItem::new).toList();
         return Stream.concat(folders.stream(), objects.stream()).filter(s3ListItem -> StringUtils.isEmpty(query) || s3ListItem.getName().toLowerCase().contains(query.toLowerCase())).collect(Collectors.toList());
     }
 
     public void createFolder(String key) {
-        ObjectMetadata metadata = new ObjectMetadata();
-        metadata.setContentType("binary/octet-stream");
-        PutObjectRequest putRequest = new PutObjectRequest(bucket, key + "/", new ByteArrayInputStream(new byte[0]), metadata);
-        amazonS3.putObject(putRequest);
+        PutObjectRequest request = PutObjectRequest.builder()
+            .bucket(bucket)
+            .key(key.endsWith("/") ? key : key + "/")
+            .contentType("binary/octet-stream")
+            .build();
+
+        amazonS3.putObject(request, RequestBody.empty());
     }
 
     public void deleteFiles(List<S3ListItem> items) {
-        DeleteObjectsRequest deleteObjectsRequestFiles = new DeleteObjectsRequest(bucket);
-        String[] filesKeys = items.stream().filter(s3ListItem -> s3ListItem.getType().equals(Type.FILE) || s3ListItem.getType().equals(Type.IMAGE)).map(ListItem::getId).toArray(String[]::new);
-        if (filesKeys.length > 0) {
-            deleteObjectsRequestFiles.withKeys(filesKeys);
-            amazonS3.deleteObjects(deleteObjectsRequestFiles);
+        List<ObjectIdentifier> keysToDelete = items.stream()
+            .filter(s3ListItem -> s3ListItem.getType().equals(Type.FILE) || s3ListItem.getType().equals(Type.IMAGE))
+            .map(s3ListItem -> ObjectIdentifier.builder().key(s3ListItem.getId()).build())
+            .toList();
+
+        if (!keysToDelete.isEmpty()) {
+          DeleteObjectsRequest deleteObjectsRequest = DeleteObjectsRequest.builder()
+              .bucket(bucket)
+              .delete(Delete.builder().objects(keysToDelete).build())
+              .build();
+
+          amazonS3.deleteObjects(deleteObjectsRequest);
         }
+
         items.stream().filter(s3ListItem -> s3ListItem.getType().equals(Type.FOLDER)).map(S3ListItem::getId).forEach(this::deleteDirectory);
     }
 
     public void deleteDirectory(String prefix) {
-        ObjectListing objectList = amazonS3.listObjects(bucket, prefix);
-        String[] keysList = objectList.getObjectSummaries().stream().map(S3ObjectSummary::getKey).toArray(String[]::new);
-        DeleteObjectsRequest deleteObjectsRequest = new DeleteObjectsRequest(bucket).withKeys(keysList);
-        amazonS3.deleteObjects(deleteObjectsRequest);
+        ListObjectsV2Request listRequest = ListObjectsV2Request.builder()
+            .bucket(bucket)
+            .prefix(prefix)
+            .build();
+
+        ListObjectsV2Response listResponse = amazonS3.listObjectsV2(listRequest);
+
+        List<ObjectIdentifier> keysToDelete = listResponse.contents().stream()
+            .map(s3Object -> ObjectIdentifier.builder().key(s3Object.key()).build())
+            .collect(Collectors.toList());
+
+        if (!keysToDelete.isEmpty()) {
+          DeleteObjectsRequest deleteRequest = DeleteObjectsRequest.builder()
+              .bucket(bucket)
+              .delete(Delete.builder().objects(keysToDelete).build())
+              .build();
+
+          amazonS3.deleteObjects(deleteRequest);
+        }
     }
 
     //for small files
     public void uploadSinglepart(final SessionUser user, Attachment multipartFile, final String path) {
         String uniqueFileName = path + multipartFile.getDataHandler().getName();
-        PutObjectRequest por = null;
         try {
             byte[] bytes = IOUtils.toByteArray(multipartFile.getDataHandler().getInputStream());
             String contentType = multipartFile.getContentType().toString();
-            ObjectMetadata objectMetadata = new ObjectMetadata();
-            objectMetadata.setContentType(contentType);
-            objectMetadata.setUserMetadata(getUserMetadata(user));
-            objectMetadata.setContentLength(bytes.length);
-            ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);
-            por = new PutObjectRequest(bucket, uniqueFileName, byteArrayInputStream, objectMetadata);
-            if(aclEnabled){
-                por.withCannedAcl(CannedAccessControlList.PublicRead);
+
+            PutObjectRequest.Builder requestBuilder = PutObjectRequest.builder()
+                .bucket(bucket)
+                .key(uniqueFileName)
+                .contentType(contentType)
+                .contentLength((long) bytes.length)
+                .metadata(getUserMetadata(user));
+
+            if (aclEnabled) {
+              requestBuilder.acl(ObjectCannedACL.PUBLIC_READ);
             }
+
+            PutObjectRequest putObjectRequest = requestBuilder.build();
+            amazonS3.putObject(putObjectRequest, RequestBody.fromBytes(bytes));
         } catch (IOException e) {
             logger.error("An exception occurred during a single part upload to S3.", e);
         }
-        amazonS3.putObject(por);
     }
 
     //for large files
     public void uploadMultipart(final SessionUser user, Attachment multipartFile, final String path, final int index, final int total) {
         String uniqueFileName = path + multipartFile.getDataHandler().getName();
 
-        if(eParts.containsKey(uniqueFileName) && eParts.get(uniqueFileName).get(eParts.get(uniqueFileName).size()-1).getPartNumber() > index + 1){
+        if(eParts.containsKey(uniqueFileName) && eParts.get(uniqueFileName).get(eParts.get(uniqueFileName).size()-1).partNumber() > index + 1){
             abortMultipartUploadAndClear(uniqueFileName);
         }
 
         if (!multipartUploadResultMap.containsKey(uniqueFileName)) {
             String contentType = TIKA.detect(uniqueFileName);
-            ObjectMetadata objectMetadata = new ObjectMetadata();
-            objectMetadata.setContentType(contentType);
-            objectMetadata.setUserMetadata(getUserMetadata(user));
-            InitiateMultipartUploadRequest initRequest = new InitiateMultipartUploadRequest(bucket, uniqueFileName, objectMetadata);
-            if(aclEnabled){
-                initRequest.withCannedACL(CannedAccessControlList.PublicRead);
+
+            CreateMultipartUploadRequest.Builder requestBuilder = CreateMultipartUploadRequest.builder()
+                .bucket(bucket)
+                .key(uniqueFileName)
+                .contentType(contentType)
+                .metadata(getUserMetadata(user));
+
+            if (aclEnabled) {
+              requestBuilder.acl(ObjectCannedACL.PUBLIC_READ);
             }
-            InitiateMultipartUploadResult initResponse = amazonS3.initiateMultipartUpload(initRequest);
-            multipartUploadResultMap.put(uniqueFileName, initResponse);
+
+            CreateMultipartUploadRequest request = requestBuilder.build();
+            CreateMultipartUploadResponse response = amazonS3.createMultipartUpload(request);
+            multipartUploadResultMap.put(uniqueFileName, response);
         }
 
-        InitiateMultipartUploadResult initResponse = multipartUploadResultMap.get(uniqueFileName);
+        CreateMultipartUploadResponse initResponse = multipartUploadResultMap.get(uniqueFileName);
 
         int partNumber = index + 1;
 
-        UploadPartRequest uploadRequest = null;
         try {
             byte[] bytes = IOUtils.toByteArray(multipartFile.getDataHandler().getInputStream());
             ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);
-            uploadRequest = new UploadPartRequest()
-                    .withBucketName(bucket)
-                    .withKey(uniqueFileName)
-                    .withUploadId(initResponse.getUploadId())
-                    .withPartNumber(partNumber)
-                    .withInputStream(byteArrayInputStream)
-                    .withPartSize(bytes.length);
+            UploadPartRequest uploadRequest = UploadPartRequest.builder()
+                .bucket(bucket)
+                .key(uniqueFileName)
+                .uploadId(initResponse.uploadId())
+                .partNumber(partNumber)
+                .contentLength((long) bytes.length)
+                .build();
+
+            // Upload the part and add the response's ETag to our list.
+            UploadPartResponse uploadResponse = amazonS3.uploadPart(uploadRequest, RequestBody.fromInputStream(byteArrayInputStream, bytes.length));
+            eParts.add(uniqueFileName, CompletedPart.builder()
+                .partNumber(partNumber)
+                .eTag(uploadResponse.eTag())
+                .build());
         } catch (IOException e) {
             logger.error("An exception occurred during a multi part upload to S3.", e);
         }
-        // Upload the part and add the response's ETag to our list.
-        UploadPartResult uploadResult = amazonS3.uploadPart(uploadRequest);
-        eParts.add(uniqueFileName, uploadResult.getPartETag());
 
         if (partNumber == total) {
-            CompleteMultipartUploadRequest compRequest = new CompleteMultipartUploadRequest(bucket, uniqueFileName,
-                    initResponse.getUploadId(), eParts.get(uniqueFileName));
+            CompleteMultipartUploadRequest compRequest = CompleteMultipartUploadRequest.builder()
+                .bucket(bucket)
+                .key(uniqueFileName)
+                .uploadId(initResponse.uploadId())
+                .multipartUpload(CompletedMultipartUpload.builder()
+                    .parts(eParts.get(uniqueFileName))
+                    .build())
+                .build();
             try {
                 amazonS3.completeMultipartUpload(compRequest);
             } catch (SdkClientException e){
@@ -217,9 +274,14 @@ public class AwsS3ServiceImpl implements AwsS3Service {
     }
 
     public void abortMultipartUploadAndClear(final String uniqueFileName){
-        InitiateMultipartUploadResult result = multipartUploadResultMap.get(uniqueFileName);
+        CreateMultipartUploadResponse result = multipartUploadResultMap.get(uniqueFileName);
         if(result != null) {
-            amazonS3.abortMultipartUpload(new AbortMultipartUploadRequest(bucket, result.getKey(), result.getUploadId()));
+            AbortMultipartUploadRequest abortRequest = AbortMultipartUploadRequest.builder()
+                .bucket(bucket)
+                .key(result.key())
+                .uploadId(result.uploadId())
+                .build();
+            amazonS3.abortMultipartUpload(abortRequest);
         }
         clearMultipartUpload(uniqueFileName);
     }
